# undead-slayer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: python-package.yml
src/undead_slayer/: __main__.py  enums.py
src/undead_slayer/config/: config_manager.py
src/undead_slayer/localization/: language_manager.py
src/undead_slayer/ui/: ui_manager.py
src/undead_slayer/ui/cli/: cli.py
src/undead_slayer/ui/gui/: gui.py
src/undead_slayer/ui/tui/: tui.py
src/undead_slayer/utils/: locations.py
tests/: test__main__.py  test_config_manager.py  test_ui_manager.py
