[project]
name = "undead-slayer"
version = "0.1.0"
description = "An RPG game."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.8.1",
    "textual>=0.81.0",
]

[project.scripts]
undead_slayer = "undead_slayer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "pyright[nodejs]>=1.1.382.post1",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "textual-dev>=1.6.1",
]
